		area, filefind and newfiles records are automatic updated if
		they were connected to that area.
		Added setup for routing the table.
		Corrected several page layouts for printing on A4 paper.
		Added setup for nodes connected via directories (we are the
		FTP server side).
		Added setup setting for outbound queue in global setup.
		Added support for default setup of the HA archiver.

	script:
		The bbsdoor.sh and rundoor.sh scripts are now only installed
		if they were not installed before.
		Added better support for different locations of the external
		editor joe.

	examples:
		With the aid of a little utility (endian) the right menus are
		now installed on little or big endian machines.


v0.35.02	22-Jun-2002 - 06-Jul-2002

	upgrade:
		Delete ~/etc/lastcall.data
		Delete ~/etc/archiver.data
		Delete ~/etc/virscan.data
		Start mbsetup and enter the Edit Archiver Programs. The new
		values should now be set. Do the same for Virus scanners.

	general:
		Added checks for GoldED in external program checks.
		Added new empty path /opt/mbse/var/boxes.
		Implemented nodes private outbound boxes.
		Revised the dependencies for all sourcefiles.

	common.a:
		Added debug nodelist IFT flag for logging.
		Added archive detection for tar, gzip and compress.

	mbsetup:
		Changed node records layout into 8 screens to be able to add
		more settings. New settings not in use yet are disabled.
		Added settings for node contact information. This is private
		for mbsetup use only.
		Implemented nodes special outbound box setup. When you enter
		that item for the first time, it fills this with a suggested
		path.
		Changed description and filetype for default tar gzipped files
		in archiver setup.
		Added default records for bzip2 and uncompressed tar files.

	mbcico:
		Implemented nodes special outbound boxes.
		Corrected a problem with getting modem aftercall info from ISDN
		modems.

	mbout:
		Implemented nodes special outbound boxes.

	mbfido: